...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_search_view"
        app:iconifiedByDefault="false"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="Search GitHub User Here..." />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
...
