<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_empty_user">User not found</string>
    <string name="label_empty_search">Let\'s search</string>
    <string name="label_user_detail">User Detail</string>
    <string name="desc_followers"><![CDATA[<b>%1$s</b> Followers | <b>%2$s</b> Following]]></string>
</resources>